// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/WarnMetricAckModal error display 1`] = `
<Modal
  animation={true}
  aria-labelledby="warnMetricAckHeaderModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={false}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="warnMetricAckHeaderModalLabel"
    >
      <FormattedMessage
        defaultMessage="Warning"
        id="warn_metric_ack_modal.header.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div>
      <FormattedMessage
        defaultMessage="\\"Team exceeds {limit} users. Consider activating user management controls to ensure compliance. {link}\\""
        id="warn_metric_ack_modal.number_of_active_users.description"
        values={
          Object {
            "limit": 500,
            "link": <ErrorLink
              defaultMessage="aae_id"
              messageId="aae_id"
              url="https://mattermost.com/pl/default-aae-faq"
            />,
          }
        }
      />
      <br />
      <div
        className="form-group has-error"
      >
        <br />
        <label
          className="control-label"
        >
          <FormattedMessage
            defaultMessage="We were unable to reach support. {link} instead to contact support"
            id="warn_metric_ack_modal.mailto.message"
            values={
              Object {
                "link": <WarnMetricAckErrorLink
                  defaultMessage="Email us"
                  messageId="warn_metric_ack_modal.mailto.link"
                  onClickHandler={[Function]}
                  url="mailto:support@mattermost.com?cc=a@test.com&subject=Mattermost%20support%20request%3Aaae_id&body=Mattermost%20support%20request%20for%20aae_id%3A%20Team%20exceeds%20500%20users.%20Consider%20activating%20user%20management%20access%20controls%20to%20ensure%20compliance.%0D%0AContact%20Fake%20Person%0D%0AEmail%20a%40test.com%0D%0ASite%20URL%20http%3A%2F%2Flocalhost%3A8065%0D%0ADiagnostic%20Id%20diag_0%0D%0AIf%20you%20have%20any%20additional%20inquiries%2C%20please%20contact%20support%40mattermost.com"
                />,
              }
            }
          />
        </label>
      </div>
      <br />
      <div
        className="help__format-text"
        style={
          Object {
            "opacity": "0.45",
          }
        }
      >
        <FormattedMessage
          defaultMessage="Contacting support sends your contact information to Mattermost, Inc. {link}"
          id="warn_metric_ack_modal.mailto.body.sub_text"
          values={
            Object {
              "link": <ErrorLink
                defaultMessage="Learn More"
                messageId="warn_metric_ack_modal.learn_more.link"
                url="https://mattermost.com/pl/default-aae-faq"
              />,
            }
          }
        />
      </div>
    </div>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <button
      className="btn btn-link cancel-button"
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="warn_metric_ack_modal.cancel"
        values={Object {}}
      />
    </button>
    <button
      autoFocus={true}
      className="btn btn-primary save-button"
      data-dismiss="modal"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Contact Support"
        id="warn_metric_ack_modal.contact_support"
        values={Object {}}
      />
    </button>
  </ModalFooter>
</Modal>
`;

exports[`components/WarnMetricAckModal should match snapshot, init 1`] = `
<Modal
  animation={true}
  aria-labelledby="warnMetricAckHeaderModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={false}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="warnMetricAckHeaderModalLabel"
    >
      <FormattedMessage
        defaultMessage="Warning"
        id="warn_metric_ack_modal.header.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div>
      <FormattedMessage
        defaultMessage="\\"Team exceeds {limit} users. Consider activating user management controls to ensure compliance. {link}\\""
        id="warn_metric_ack_modal.number_of_active_users.description"
        values={
          Object {
            "limit": 500,
            "link": <ErrorLink
              defaultMessage="aae_id"
              messageId="aae_id"
              url="https://mattermost.com/pl/default-aae-faq"
            />,
          }
        }
      />
      <br />
      <br />
      <div
        className="help__format-text"
        style={
          Object {
            "opacity": "0.45",
          }
        }
      >
        <FormattedMessage
          defaultMessage="Contacting support sends your contact information to Mattermost, Inc. {link}"
          id="warn_metric_ack_modal.mailto.body.sub_text"
          values={
            Object {
              "link": <ErrorLink
                defaultMessage="Learn More"
                messageId="warn_metric_ack_modal.learn_more.link"
                url="https://mattermost.com/pl/default-aae-faq"
              />,
            }
          }
        />
      </div>
    </div>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <button
      className="btn btn-link cancel-button"
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="warn_metric_ack_modal.cancel"
        values={Object {}}
      />
    </button>
    <button
      autoFocus={true}
      className="btn btn-primary save-button"
      data-dismiss="modal"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Contact Support"
        id="warn_metric_ack_modal.contact_support"
        values={Object {}}
      />
    </button>
  </ModalFooter>
</Modal>
`;
